[package]
name = "response-sim"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
http = "1.4.0"
rand = "0.9.2"
reqwest = { version = "0.13.1", features = ["json", "blocking"] }
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = "3.16.1"
sqlx = { version = "0.8.6", features = ["sqlite", "macros", "runtime-tokio"] }
thirtyfour = "0.36.1"
tokio = { version = "1.49.0", features = ["full"] }
tower-service = "0.3.3"
